welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: ';' expected but ')' found.
		else {y= -1;i=gML)
                                 ^ZigZag:18: error: Missing closing brace `}' assumed here
}
^